# faculdade

./: README.md
01 periodo/INF 150/: luisa102026lab3.ipynb  luisa102026lab7.ipynb  luisa102026lab8.ipynb  trabalho_1.ipynb  trabalho_2.ipynb
PRIMEIRO PERIODO/inf110/trabalho 1/: esqui.cpp  estacoes.cpp  maquina.cpp  maquinap.cpp  teste.cpp  trabalho.cpp
S01/INF 110 - Computer Programming I/trabalho 2/: neuronio.cpp
S01/INF 110 - Computer Programming I/trabalho 3/: chatbot2.cpp  luisa102026f.cpp  teste1.cpp  (+2 more)
S01/INF 150 - Introduction To Logical Systems/: luisa102026lab1.ipynb  luisa102026lab10.ipynb  luisa102026lab2.ipynb  luisa102026lab6.ipynb
S05/INF 420 - Artificial Intelligence I/: colab_tp4_102026.txt  colab_tp5_102026.txt  tf_102026.txt
S05/INF 450 - Computer Organization II/: Trabalho1_Inf450_2023_multiplas_unidades.ipynb  Trabalho_2_inf450_23_softwarepipeline.ipynb
optativas/INF 390 - Computer Graphics/atividade 01/SCENE-SHADOWMAP-0/: CMakeLists.txt
optativas/INF 390 - Computer Graphics/atividade 01/SCENE-SHADOWMAP-0/glad/: CMakeLists.txt
optativas/INF 390 - Computer Graphics/atividade 01/SCENE-SHADOWMAP-0/glad/include/glad/: glad.h
optativas/INF 390 - Computer Graphics/atividade 01/SCENE-SHADOWMAP-0/glad/src/: glad.c
optativas/INF 390 - Computer Graphics/atividade 01/SCENE-SHADOWMAP-0/src/: loadobject.h  main.cpp  object.h  scene.h  shader.fs  shader.vs  shadow_map.h  texture.h  utils.h
optativas/INF 390 - Computer Graphics/atividade 02/: CMakeLists.txt  README.md  teste.py
optativas/INF 390 - Computer Graphics/atividade 02/src/: main.cpp  scene.h  shader.fs  shader.vs  utils.h
optativas/INF 390 - Computer Graphics/atividade 03/: CMakeLists.txt
optativas/INF 390 - Computer Graphics/atividade 03/src/: main.cpp  scene.h  shader.vs  utils.h
optativas/INF 390 - Computer Graphics/atividade 04/: CMakeLists.txt
optativas/INF 390 - Computer Graphics/atividade 04/src/: main.cpp  scene.h  shader.vs
periodo 05/inf 221/: m.txt
praticas_inf112/pratica01/: ex2.cpp  ex3.cpp
praticas_inf112/pratica10/: main.cpp
(+448 files in other folders)
